Normalize query params in message list
